25_may_2026.txt
show databases
admin   40.00 KiB
config  12.00 KiB
local   64.00 KiB
show dbs
admin   40.00 KiB
config  12.00 KiB
local   64.00 KiB
use vit
switched to db vit
db
vit
db.dropDatabase
[Function: dropDatabase] AsyncFunction {
  apiVersions: [ 1, Infinity ],
  returnsPromise: true,
  serverVersions: [ '0.0.0', '999.999.999' ],
  topologies: [ 'ReplSet', 'Standalone', 'Sharded', 'LoadBalanced' ],
  returnType: { type: 'unknown', attributes: {} },
  deprecated: false,
  platforms: [ 'Compass', 'Browser', 'CLI' ],
  isDirectShellCommand: false,
  acceptsRawInput: false,
  shellCommandCompleter: undefined,
  newShellCommandCompleter: undefined,
  help: [Function (anonymous)] Help
}
show databases
admin   40.00 KiB
config  12.00 KiB
local   64.00 KiB
use vit
already on db vit
db
vit
db.createCollection("students")
{ ok: 1 }
Students
ReferenceError: Students is not defined
students
ReferenceError: students is not defined
show collections
students
db.createCollection("employee")
{ ok: 1 }
show collections
employee
students
db.createCollection("employee")
{ ok: 1 }
db.employee.insert{name:'jay', department:'ece'}
SyntaxError: Missing semicolon. (1:18)

> 1 | db.employee.insert{name:'jay', department:'ece'}
    |                   ^
db.employee.insert({name:'jay', department:'ece'})
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a1458513777fbf48ee152dc')
  }
}
db.employee.insert({name:'jay',marks:50, department:'ece'})
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a1458793777fbf48ee152dd')
  }
}
db.employee.find()